--- a/Index.cshtml
+++ b/Index.cshtml
@@ -1,12 +1,10 @@
-﻿@model NCIProject.Models.Submission
-
+﻿
 @{
    ViewBag.Title = "Index";
    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h2>Index</h2>
-
-<div>
-   <a href="@Url.Action("Index", "Admin")"> <span class="glyphicon glyphicon-circle-arrow-left "></span> back to Admin Dashboard</a>
-</div>
+   
+	<div class="jumbotron">
+		<h1>Name : NCIProject</h1>
+		
+	</div>
